--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,6 @@ main {
   position: absolute;
   top: 10px;
   left: 9.5%;
-
 }
 
 #logo img {
@@ -34,7 +33,6 @@ main {
   padding: 20px;
   text-transform: uppercase;
   list-style: none;
-
 }
 
 #navbar li {
@@ -47,15 +45,11 @@ main {
   text-decoration: none;
   transition: .5s;
   font-size: 14px;
-
 }
 
 #navbar .nav-link:hover {
-  color: #9999;
-
-
+  color: #999;
 }
-
 
 /* HOME */
 #title-container {
@@ -65,13 +59,13 @@ main {
 }
 
 #title-container h1 {
- font-size: 50px;
+  font-size: 50px;
 }
 
 #title-container p {
- margin-top: 10px;
- text-transform: uppercase;
- color: #999;
+  margin-top: 10px;
+  text-transform: uppercase;
+  color: #999;
 }
 
 #posts-container {
@@ -92,11 +86,16 @@ main {
 }
 
 .post-box:nth-child(3) {
- margin: 0 1%;
+  margin: 0 1%;
 }
 
 .post-box img {
   width: 100%;
+}
+
+.post-box .post-title {
+  font-size: 24px;
+  margin: 10px 0;
 }
 
 .post-box .post-title a {
@@ -106,16 +105,10 @@ main {
 
 .post-box .post-title a:hover {
   color: #999;
-  
-}
-
-.post-box .post-title {
-  font-size: 24px;
-  margin: 10px 0;
 }
 
 .post-box .post-description {
-  color: gray
+  color: #666;
 }
 
 .tags-container {
@@ -126,16 +119,138 @@ main {
   font-size: 14px;
   color: #333;
   display: inline-block;
-  margin: 5px;
+  margin-right: 5px;
+}
+
+/* POST */
+#post-container {
+  display: grid;
+  grid-template-columns: 75% 25%;
+  grid-template-rows: auto;
+  grid-template-areas: "main sidebar";
+  grid-gap: 10px;
+  padding-top: 30px;
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-bottom: 250px;
+}
+
+.content-container {
+  grid-area: main;
+}
+
+#main-title {
+  font-size: 36px;
+  margin-bottom: 30px;
+}
+
+#post-description {
+  font-style: italic;
+  margin-bottom: 40px;
+}
+
+.post-content {
+  line-height: 1.8;
+  margin: 10px 0;
+}
+
+.img-container {
+  margin-bottom: 30px;
+}
+
+.img-container img {
+  width: 60%;
+}
+
+/* POST ASIDE */
+.nav-container {
+  grid-area: sidebar;
+}
+
+#tags-title, #categories-title {
+  font-size: 24px;
+  margin-bottom: 10px;
+  background-color: #000;
+  color: #FFF;
+  text-align: center;
+  padding: 10px;
+  font-weight: 300;
+}
+
+#tag-list, #categories-list {
+  list-style: none;
+}
+
+#tag-list li, #categories-list li {
+  margin-bottom: 10px;
+}
+
+#tag-list a, #categories-list a {
+  color: #666;
+  transition: .5s;
+}
+
+#tag-list a:hover, #categories-list a:hover {
+  color: #000;
 }
 
 /* FOOTER */
+
 footer {
   width: 100%;
   position: absolute;
   bottom: 0;
   text-align: center;
   background-color: #000;
-  color: #fff;
-  padding: 50px 0px;
+  color: #FFF;
+  padding: 50px 0;
+}
+
+/* MOBILE */
+@media(max-width: 480px) {
+
+  /* HOME */
+  header {
+    width: 100%;
+  }
+
+  #logo {
+    display: block;
+    position: relative;
+    margin: 0 auto;
+    left: 0;
+    width: 50px;
+  }
+
+  #navbar {
+    display: none;
+  }
+
+  #title-container {
+    min-width: 100%;
+    margin-top: 20px;
+  }
+
+  #posts-container {
+    margin-top: 20px;
+  }
+
+  .post-box {
+    flex: 100% 1 0;
+    padding: 15px;
+    margin: 0;
+  }
+
+  /* POST */
+  #post-container {
+    grid-template-columns: 100%;
+    padding: 15px;
+    grid-template-areas: "main"
+    "sidebar";
+  }
+
+  .img-container img {
+    width: 100%;
+  }
+
 }
